--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "predis/predis": "^1.1",
         "ramsey/uuid": "^3.5",
         "symfony/process": "^4.2",
-        "symfony/debug": "^4.2"
+        "symfony/debug": "^4.2",
+        "ptx/lumen-require": "^1.1"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
